--- a/App/ADBMailer.csproj
+++ b/App/ADBMailer.csproj
@@ -10,6 +10,8 @@
     <DebugType>portable</DebugType>
     <AssemblyVersion>1.0.1.0</AssemblyVersion>
     <FileVersion>1.0.1.0</FileVersion>
+    <StartupObject>ADBMailer.Program</StartupObject>
+    <PlatformTarget>x64</PlatformTarget>
   </PropertyGroup>
 
   <ItemGroup>
@@ -25,6 +27,24 @@
     <PackageReference Include="EPPlus" Version="4.5.3.2" />
     <PackageReference Include="MailKit" Version="3.2.0" />
     <PackageReference Include="System.Configuration.ConfigurationManager" Version="6.0.0" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Reference Include="cli_basetypes">
+      <HintPath>LibreOfficeSDK\cli_basetypes.dll</HintPath>
+    </Reference>
+    <Reference Include="cli_cppuhelper">
+      <HintPath>LibreOfficeSDK\cli_cppuhelper.dll</HintPath>
+    </Reference>
+    <Reference Include="cli_oootypes">
+      <HintPath>LibreOfficeSDK\cli_oootypes.dll</HintPath>
+    </Reference>
+    <Reference Include="cli_ure">
+      <HintPath>LibreOfficeSDK\cli_ure.dll</HintPath>
+    </Reference>
+    <Reference Include="cli_uretypes">
+      <HintPath>LibreOfficeSDK\cli_uretypes.dll</HintPath>
+    </Reference>
   </ItemGroup>
 
   <ItemGroup>
